# logbasic

./: .gitignore  pyproject.toml  readme.md
src/logbasic/: __init__.py  color_code.py
src/logbasic.egg-info/: PKG-INFO
src/logeasy/: __init__.py  log_type_text.py
src/pydbt.egg-info/: PKG-INFO
tests/: test_generic.py
