[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "pydbt"
version = "0.0.1"
# dependencies = [
#   'postgreasy>1.1.0',
# ]
authors = [{ name = "Casper Kole", email = "casper@voltgoed.nl" }]
description = "A simple package for logging."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/casper-voltgoed/logbasic"
Issues = "https://github.com/casper-voltgoed/logbasic/issues"


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
