[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "logbasic"
version = "0.0.9"
dependencies = []
authors = [{ name = "Casper Kole", email = "casper@voltgoed.nl" }]
description = "A simple package for logging."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CFKaligula/logbasic"
Issues = "https://github.com/CFKaligula/logbasic/issues"
